--- a/trustpoint/templates/devices/credentials/profile_select.html
+++ b/trustpoint/templates/devices/credentials/profile_select.html
@@ -13,8 +13,8 @@
             <div class="card-body">
                 <div class="tp-card-centered-content">
                     <p>{% trans 'Please select the type of application credential you wish to issue.' %}</p>
-                        {% for certificate_profile in certificate_profiles %}
-                            <a href="{% url certificate_profile.url pk=device.pk %}" class="btn btn-primary mb-3" style="width: 20rem;">{{ certificate_profile.label }}</a><br>
+                        {% for profile_id, display_name in cert_profile_list.items %}
+                            <a href="{% url profile_issuance_url pk=device.pk profile_id=profile_id %}" class="btn btn-primary mb-3" style="width: 20rem;">{{ display_name }}</a><br>
                         {% endfor %}
 
                 </div>
