--- a/trustpoint/templates/setup_wizard/setup_mode.html
+++ b/trustpoint/templates/setup_wizard/setup_mode.html
@@ -46,7 +46,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="{% url 'setup_wizard:select_tls_server_credential' %}" class="btn btn-primary w-100">
+                            <a href="{% url 'setup_wizard:create_super_user' %}" class="btn btn-primary w-100">
                                 {% trans 'Start Fresh Setup' %}
                             </a>
                         </div>
@@ -66,7 +66,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="{% url 'setup_wizard:restore_options' %}" class="btn btn-primary w-100">
+                            <a href="" class="btn btn-primary w-100">
                                 {% trans 'Restore Backup' %}
                             </a>
                         </div>
