--- a/trustpoint/templates/error_base.html
+++ b/trustpoint/templates/error_base.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Trustpoint{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/error.css' %}">
+    <link rel="stylesheet" href="{% static 'css/error.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     {% block head %}{% endblock %}
 </head>
 <body>
