Updated version of back to dashboard button

--- a/trustpoint/templates/500.html
+++ b/trustpoint/templates/500.html
@@ -6,6 +6,12 @@
 <div class="alert">
     <h4 class="alert-heading">Internal Server Error</h4>
     <p>Something went wrong on our end.</p>
-    <button type="button" id="BacktoDashboardButton" onclick="window.location.href='https://localhost/home/dashboard/';"  class="btn btn-primary w-100">Back to Dashboard</button>
+    <button 
+    type="button" 
+    id="BacktoDashboardButton" 
+    onclick="window.location.href='/home/dashboard/';"  
+    class="btn btn-primary w-100">
+    Back to Dashboard
+    </button>
 </div>
 {% endblock %}
