--- a/trustpoint/templates/404.html
+++ b/trustpoint/templates/404.html
@@ -6,6 +6,12 @@
 <div class="alert">   
     <h4 class="alert-heading">Page Not Found</h4>
     <p>The requested page could not be found.</p>
-    <button type="button" id="BacktoDashboardButton" onclick="window.location.href='https://localhost/home/dashboard/';"  class="btn btn-primary w-100">Back to Dashboard</button>
+    <button 
+    type="button" 
+    id="BacktoDashboardButton" 
+    onclick="window.location.href='/home/dashboard/';"  
+    class="btn btn-primary w-100">
+    Back to Dashboard
+    </button>
 </div>
 {% endblock %}
